syntax = "proto3";

package dousheng.message;
option go_package="github.com/Go-To-Byte/DouSheng/message_service/apps/message";

import "github.com/Go-To-Byte/DouSheng/user_center/apps/user/pb/user.proto";

// 定义 message 模块的接口
service Service {
  // 获取消息列表
  rpc ChatMessageList(ChatMessageListRequest) returns(ChatMessageListResponse);
  // 消息操作
  rpc ChatMessageAction(ChatMessageActionRequest) returns(ChatMessageActionResponse);
}

// 获取聊天记录消息列表 的接口请求 model
message ChatMessageListRequest {
  // 用户鉴权Token
  // @gotags: json:"token" form:"token" validate:"required" binding:"required"
  string token = 1;
  // 对方用户ID
  // @gotags: json:"to_user_id" form:"to_user_id" validate:"required" binding:"required"
  int64 to_user_id = 2;
}

// 获取聊天记录消息列表 的接口响应 model
message ChatMessageListResponse {
  // 关注列表用户信息
  // @gotags: json:"message"
  repeated Message message_list = 1;
}

// 发送消息 的接口请求 model
message ChatMessageActionRequest {
  // 用户鉴权Token
  // @gotags: json:"token" form:"token" validate:"required" binding:"required"
  string token = 1;
  // 对方用户ID
  // @gotags: json:"to_user_id" form:"to_user_id" validate:"required" binding:"required"
  int64 to_user_id = 2;
  // 1-发送消息
  // @gotags: json:"action_type" form:"action_type" validate:"required" binding:"required"
  int32 action_type = 3;
  // 消息内容
  // @gotags: json:"content" form:"content" validate:"required" binding:"required"
  string content = 4;
}

// 发送消息 的接口响应 model
message ChatMessageActionResponse {
  // 可以携带一些额外属性
  // @gotags: json:"mate"
  map<string, string> mate = 1;
}

message Message {
  // 消息id
  // @gotags: json:"id"
  int64 id = 1;
  // 该消息接收者id
  // @gotags: json:"to_user_id"
  int64 to_user_id = 2;
  // 该消息发送者id
  // @gotags: json:"from_user_id"
  int64 from_user_id = 3;
  // 消息内容
  // @gotags: json:"content"
  string content = 4;
  // 消息创建时间
  // @gotags: json:"created_at"
  int64 created_at = 5;
}

// 聊天记录表:与数据库对应的PO对象
message MessagePo {
  // 消息id
  // @gotags: json:"id" gorm:"id"
  int64 id = 1;
  // 该消息接收者id
  // @gotags: json:"to_user_id" gorm:"to_user_id"
  int64 to_user_id = 2;
  // 该消息发送者id
  // @gotags: json:"from_user_id" gorm:"from_user_id"
  int64 from_user_id = 3;
  // 消息内容
  // @gotags: json:"content" gorm:"content"
  string content = 4;
  // 消息创建时间
  // @gotags: json:"created_at" gorm:"created_at"
  int64 created_at = 5;
}

